<?xml version="1.0" encoding="UTF-8"?>
<!-- ====================================================
         Maven 2 project configuration file
         http://maven.apache.org/maven2/
     ==================================================== -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.opengis</groupId>
    <artifactId>geoapi-parent</artifactId>
    <version>4.0-SNAPSHOT</version>
  </parent>



  <!-- ====================================================
           Project description
       ==================================================== -->
  <groupId>org.opengis.bridge</groupId>
  <artifactId>geoapi-java-python</artifactId>
  <name>Bridge between GeoAPI in Java and Python</name>
  <description>
    Bridge between GeoAPI in Java and GeoAPI in Python.
    This bridge enables the use of GeoAPI implementations in Java from the Python language, or conversely.
  </description>



  <!-- ====================================================
           Developers and contributors
       ==================================================== -->
  <developers>
    <developer>
      <id>desruisseaux</id>
      <name>Martin Desruisseaux</name>
      <email>martin.desruisseaux@geomatys.com</email>
      <organization>Geomatys</organization>
      <organizationUrl>http://www.geomatys.com</organizationUrl>
      <roles>
        <role>Java developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>



  <!-- ====================================================
           Dependencies
       ==================================================== -->
  <dependencies>
    <dependency>
      <groupId>org.opengis</groupId>
      <artifactId>geoapi-pending</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jpy</groupId>
      <artifactId>jpy</artifactId>
      <version>0.9.0</version>
    </dependency>
    <dependency>
      <groupId>tech.uom</groupId>
      <artifactId>seshat</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.opengis</groupId>
      <artifactId>geoapi-conformance</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>



  <!-- ==================================================================
           Repository from which to download the JPY library.
       ================================================================== -->
  <repositories>
    <repository>
      <id>senbox</id>
      <name>Senbox repository</name>
      <url>http://nexus.senbox.net/nexus/content/repositories/releases</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>



  <!-- ====================================================
           Skip the tests because they require native code
       ==================================================== -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skipTests>${skipNativeLibraryTests}</skipTests>
        </configuration>
      </plugin>

      <!-- Anticipation for Java 9. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestEntries>
              <Automatic-Module-Name>
                org.opengis.geoapi.python
              </Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>9</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
